src/objects/MetadataField__c.object
<CustomObject>
    <fields>
        <fullName>AssetSummary__c</fullName>
        <formula>IF(
    IsManaged__c,
    &apos;Managed &apos;,
    &apos;&apos;
)
+
IF(
    IsCustom__c,
    &apos;Custom Field: &apos;,
    &apos;Standard Field: &apos;
)
+
IF(
     AND(IsNillable__c = false, IsCalculated__c = false, ISPICKVAL(Type__c, &apos;Boolean&apos;) = false),
     &apos;Required &apos;,
     &apos;&apos;
)
+
IF(
     IsCalculated__c,
     &apos;Formula &apos;,
     &apos;&apos;
)
+
CASE(
    TEXT(Type__c),
    &apos;Double&apos;, TEXT(Type__c) + &apos; (&apos; + TEXT(Precision__c) + &apos;, &apos; + TEXT(Scale__c) + &apos;)&apos;,
    &apos;Integer&apos;, TEXT(Type__c) + &apos; (&apos; + TEXT(Digits__c) + &apos;)&apos;,
    &apos;String&apos;, TEXT(Type__c) + &apos; (&apos; + TEXT(Length__c) + &apos;)&apos;,
    TEXT(Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessDefinition__c</fullName>
        <label>Business Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalculatedFormula__c</fullName>
        <description>System generated.</description>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Calculated Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DefaultValueFormula__c</fullName>
        <description>System generated. Returns the default value specified for this field if a formula is not used.</description>
        <inlineHelpText>System generated. Returns the default value specified for this field if a formula is not used.</inlineHelpText>
        <label>Default Value Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <description>System generated. Returns the default value for this field.</description>
        <inlineHelpText>System generated. Returns the default value for this field.</inlineHelpText>
        <label>Default Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DesignNotes__c</fullName>
        <label>Design Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>System generated</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Digits__c</fullName>
        <description>System generated. Returns the maximum number of digits specified for the field. This method is only valid with Integer fields.</description>
        <inlineHelpText>System generated. Returns the maximum number of digits specified for the field. This method is only valid with Integer fields.</inlineHelpText>
        <label>Digits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InlineHelpText__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Inline Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a formula field.</description>
        <inlineHelpText>Indicates if this is a formula field.</inlineHelpText>
        <label>Is Formula Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <description>System generated.</description>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Returns true if the field is used as an external ID, false otherwise.</description>
        <inlineHelpText>Returns true if the field is used as an external ID, false otherwise.</inlineHelpText>
        <label>Is External ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Approved&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManaged__c</fullName>
        <description>System generated.</description>
        <formula>TEXT(Namespace__c) != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNillable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if the field is nillable, false otherwise. A nillable field can have empty content. A non-nillable field must have a value for the object to be created or saved.</description>
        <inlineHelpText>System generated. Returns true if the field is nillable, false otherwise. A nillable field can have empty content. A non-nillable field must have a value for the object to be created or saved.</inlineHelpText>
        <label>Is Nillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPermissionable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if field permissions can be specified for the field, false otherwise.</description>
        <inlineHelpText>System generated. Returns true if field permissions can be specified for the field, false otherwise.</inlineHelpText>
        <label>Is Permissionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRestrictedDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if the parent object can&apos;t be deleted because it is referenced by a child object, false otherwise.</description>
        <inlineHelpText>System generated. Returns true if the parent object can&apos;t be deleted because it is referenced by a child object, false otherwise.</inlineHelpText>
        <label>Is Restricted Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRestrictedPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if the field is a restricted picklist, false otherwise.</description>
        <inlineHelpText>System generated. Returns true if the field is a restricted picklist, false otherwise.</inlineHelpText>
        <label>Is Restricted Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if the value for the field must be unique, false otherwise.</description>
        <inlineHelpText>System generated. Returns true if the value for the field must be unique, false otherwise.</inlineHelpText>
        <label>Is Unique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWriteRequiresMasterRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated. Returns true if writing to the detail object requires read sharing instead of read/write sharing of the parent.</description>
        <inlineHelpText>System generated. Returns true if writing to the detail object requires read sharing instead of read/write sharing of the parent.</inlineHelpText>
        <label>Is Write Requires Master Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>System generated. Returns the text label that is displayed next to the field in the Salesforce user interface. This label can be localized.</description>
        <inlineHelpText>System generated. Returns the text label that is displayed next to the field in the Salesforce user interface. This label can be localized.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastMetadataChangeDate__c</fullName>
        <label>Last Metadata Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetadataSObject__c</fullName>
        <label>SObject</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetadataSObject__c.IsInScope__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MetadataSObject__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>MetadataFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Namespace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Precision__c</fullName>
        <description>System generated. For fields of type Double, returns the maximum number of digits that can be stored, including all numbers to the left and to the right of the decimal point (but excluding the decimal point character).</description>
        <inlineHelpText>System generated. For fields of type Double, returns the maximum number of digits that can be stored, including all numbers to the left and to the right of the decimal point (but excluding the decimal point character).</inlineHelpText>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferenceTo__c</fullName>
        <description>System generated. Returns a list of Schema.sObjectType objects for the parent objects of this field. If the isNamePointing method returns true, there is more than one entry in the list, otherwise there is only one.</description>
        <inlineHelpText>System generated. Returns a list of Schema.sObjectType objects for the parent objects of this field. If the isNamePointing method returns true, there is more than one entry in the list, otherwise there is only one.</inlineHelpText>
        <label>Reference To</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <description>System generated. Returns the name of the relationship.</description>
        <inlineHelpText>System generated. Returns the name of the relationship.</inlineHelpText>
        <label>Relationship Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <description>System generated. For fields of type Double, returns the number of digits to the right of the decimal point. Any extra digits to the right of the decimal point are truncated.</description>
        <inlineHelpText>System generated. For fields of type Double, returns the number of digits to the right of the decimal point. Any extra digits to the right of the decimal point are truncated.</inlineHelpText>
        <label>Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IsCalculated__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>address</fullName>
                </value>
                <value>
                    <fullName>anytype</fullName>
                </value>
                <value>
                    <fullName>base64</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>ComplexValue</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>DataCategoryGroupReference</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>EncryptedString</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadId__c</fullName>
        <description>A unique, external ID - you can use this to store any value you want for upserting records.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique, external ID - you can use this to store any value you want for upserting records.</inlineHelpText>
        <label>Upload ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WasCreatedThisWeek__c</fullName>
        <formula>DATEVALUE(CreatedDate) &gt;= (TODAY()  - 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Was Created This Week</label>
        <type>Checkbox</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>AssetSummary__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Integer</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeek</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WasCreatedThisWeek__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Created This Week</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <description>Design &amp; config have been started</description>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blueprint</fullName>
        <active>true</active>
        <description>I have an idea with some or all details</description>
        <label>Blueprint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>